--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: List Files
+        run: ls -la
+
       - name: Deploy to EC2
         uses: appleboy/scp-action@master
         with:
@@ -30,3 +33,5 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             sudo systemctl restart nginx
+
+    
